Fix spacing glitch in facets

--- a/ckanext/pigma_theme/fanstatic/pigma_theme.css
+++ b/ckanext/pigma_theme/fanstatic/pigma_theme.css
@@ -44,6 +44,8 @@
 
 .secondary .nav-facet, .secondary .module-content, .primary article.module {
     background: #ffffff;
+}
+.secondary .module-content, .primary article.module {
     padding-top: 2em;
 }
 
